Imported SKLearn for train test split, questions about that

--- a/Second_Capstone.ipynb
+++ b/Second_Capstone.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\pam\\\\Desktop\\\\Hank\\\\springboard\\\\Springboard\\\\second_capstone'"
+       "'C:\\\\Users\\\\pam\\\\Desktop\\\\Hank\\\\springboard\\\\Springboard\\\\second_capstone\\\\Second-Capstone'"
       ]
      },
      "execution_count": 2,
@@ -1014,7 +1014,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x23382281c48>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c4302d9ec8>"
       ]
      },
      "execution_count": 20,
@@ -1211,6 +1211,43 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scaling data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Probably need to scale the price column since there are some extreme outliers. What kind of scaling should I do? Log? Min/max?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do I need to wait to get the dummies before the train test split?"
    ]
   },
   {
