Added changes to map code - color coded room type and used ATX neighborhoods from AirBNB

--- a/Second_Capstone.ipynb
+++ b/Second_Capstone.ipynb
@@ -20,15 +20,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\pam\\Desktop\\Hank\\springboard\\Springboard\\second_capstone\\Second-Capstone\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = os.getcwd()"
    ]
@@ -570,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +748,7 @@
        "max                        247.000000        365.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +881,7 @@
        "4              30  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +917,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +938,7 @@
        "Categories (4, object): [Entire home/apt, Private room, Hotel room, Shared room]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +972,7 @@
        "Text(0, 0.5, 'Num. of Listings')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1005,16 +997,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b4bc3ea2c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22da91bed88>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1048,8 +1040,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map for Location Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1150,7 +1149,7 @@
        "4  30.24829  -97.73726  Entire home/apt     99"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,15 +1181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Entire home/apt': 'blue', 'Private room': 'red', 'Hotel room': 'yellow', 'Shared room': 'green'}\n",
-      "dict_values(['blue', 'red', 'yellow', 'green'])\n"
+      "{'Entire home/apt': 'blue', 'Private room': 'red', 'Hotel room': 'yellow', 'Shared room': 'green'}\n"
      ]
     }
    ],
@@ -1199,18 +1197,26 @@
     "colors = ['blue', 'red', 'yellow', 'green']\n",
     "\n",
     "map_colors = dict(zip(rooms, colors))\n",
-    "print(map_colors)\n",
-    "print(map_colors.values())"
+    "print(map_colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(path+'\\\\data\\\\atx.geojson') as f:\n",
+    "with open(path+'\\\\data\\\\atxNeighborhoods.geojson') as f:\n",
     "    atxArea = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lat, lon = np.mean(map_df['latitude']), np.mean(map_df['longitude'])"
    ]
   },
   {
@@ -1219,12 +1225,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lat, lon = np.mean(map_df['latitude']), np.mean(map_df['longitude'])\n",
-    "\n",
     "austinMap = folium.Map(location=[lat,\n",
     "                                 lon],\n",
     "                      tiles='Stamen Toner',\n",
-    "                      zoom_start = 9)"
+    "                      zoom_start = 11)"
    ]
   },
   {
@@ -1235,7 +1239,7 @@
     {
      "data": {
       "text/plain": [
-       "<folium.features.GeoJson at 0x1ec4ea5ff48>"
+       "<folium.features.GeoJson at 0x22daa099208>"
       ]
      },
      "execution_count": 27,
@@ -1249,26 +1253,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, row in map_df.iterrows():\n",
-    "    folium.CircleMarker((row.latitude, row.longitude),\n",
-    "                       radius=3,\n",
-    "                       weight=2,\n",
-    "                       color = 'red',\n",
-    "                       fill_color = 'red',\n",
-    "                       fill_opacity = .5).add_to(austinMap)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "austinMap.save('atxPointMap.html')"
+    "for i in map_df.room_type.unique():\n",
+    "    temp = map_df[map_df['room_type'] == i]\n",
+    "    for j, row in temp.iterrows():\n",
+    "        folium.CircleMarker((row.latitude, row.longitude),\n",
+    "                            radius = 2,\n",
+    "                            weight = 2,\n",
+    "                            color = map_colors[i],\n",
+    "                            fill_color = map_colors[i],\n",
+    "                            fill_opacity = 0.2).add_to(austinMap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "austinMap.save('atxMap.html')"
    ]
   },
   {
@@ -1287,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1431,7 @@
        "4                      0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1491,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1569,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,16 +1606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b4bd01e1c8>"
+       "<matplotlib.collections.PathCollection at 0x22daeb07e08>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1648,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1666,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1711,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1735,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,16 +1772,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2b4bd00e648>"
+       "<matplotlib.collections.PathCollection at 0x22daf25b3c8>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
